# merror3

./: config.gradle  settings.gradle
Libraries/MFEMakeupSDK/assets/MFEFaceTrackerBundleFull/: data.json
Libraries/MFEMakeupSDK/assets/MFELiveMakeupBundle/Masks/Laneige/: highlight_middle_left.psd  mascara_masks_0609.tif
Libraries/MFEMakeupSDK/include/: MFELiveCommon.h  MFEMakeupSDK.hpp
Libraries/MFEMakeupSDK/include/MFELiveCommon/Models/: DeformableGrid.hpp
Libraries/MFEMakeupSDK/include/MFELiveMakeup/Models/: DynamicColorParameters.h  LashModel.h  MakeupLook.h
Libraries/MFEMakeupSDK/include/MFELiveMakeup/Models/Masks/: BrowMask.h  DeformableEyeLinerMask.h  EyeEraseMask.h  EyeLinerMask.h  EyeShadowMask.h  LipstickMask.h
Libraries/curl/include/: Makefile
Libraries/opencv/install/arm64-v8a/sdk/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
Libraries/opencv/install/armeabi-v7a/sdk/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake
Libraries/opencv/install/mips/sdk/native/jni/abi-mips/: OpenCVModules-release.cmake
Libraries/opencv/install/mips64/sdk/native/jni/abi-mips64/: OpenCVModules-release.cmake
Libraries/opencv/install/x86_64/sdk/native/jni/: OpenCV.mk
app/: build.gradle  proguard-rules.pro
app/dependencies/MFEMakeupSDK/assets/MFEFaceTrackerBundleSmall/: data.json
app/dependencies/MFEMakeupSDK/include/: FaceTrackerSDK.hpp  MakeupRendererSDK.hpp
app/dependencies/MFEMakeupSDK/include/MFELiveCommon/Models/: BaseFacePoints.hpp  TrackingData.hpp
app/dependencies/MFEMakeupSDK/include/MFELiveMakeup/Models/: MakeupAction.h  MakeupProcedure.h  MakeupProduct.h
app/dependencies/MFEMakeupSDK/include/MFELiveMakeup/Models/Masks/: BlushMask.h  DeformableEyeShadowMask.h  DeformableMakeupMask.h  FoundationMask.h  LipLinerMask.h  MakeupMask.h
app/dependencies/curl/include/curl/: Makefile
app/src/androidTest/java/com/merrors/merror/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cmake/MFECommonCMake/: MFECommonCMake.cmake
app/src/main/cpp/src/: CameraHelper.cpp  CameraHelper.hpp  DemoOverlayMask.cpp  DemoOverlayMask.hpp  ExampleLooks.cpp  ExampleLooks.hpp  GLFramebuffer.cpp  GLFramebuffer.hpp  GLProgram.cpp  GLProgram.hpp  GLTexture.cpp  GLTexture.hpp  JNIExampleRenderer.cpp  LookGenerator.cpp  LookGenerator.hpp
app/src/main/java/com/merrors/merror/: ExampleRenderer.java
app/src/main/res/drawable/: menu_back_grey_rounded.xml  menu_back_white_rounded.xml
app/src/main/res/layout/: activity_connections.xml  activity_contain.xml  activity_host_fragment.xml  activity_interceptors.xml  activity_main.xml  activity_user.xml  choose_activity_or_fragment.xml  connections.xml  interceptors.xml  recycle_list.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/merrors/merror/: ExampleUnitTest.java
arms/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+70 files in other folders)
